--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.41",
+    "dotenv": "^16.0.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   }
