--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "sarasbot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/Bot.ts",
   "scripts": {
-    "start": "node src/index.js"
+    "start:dev": "ts-node src/Bot.ts",
+    "start": "node dist/bot.js",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,12 @@
   },
   "homepage": "https://github.com/0Zyro/sarasbot#readme",
   "dependencies": {
-    "discord.js": "^12.5.3"
+    "discord.js": "^13.8.0"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.41",
+    "dotenv": "^16.0.1",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   }
 }
