--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "sarasbot",
+    "name": "bdd-discord-bot",
     "version": "0.0.1",
-    "description": "",
+    "description": "This package exposes wrapper classes that allows developer to code a discord bot thinking about the desired 'behaviours' of the bot instead of dealing with events, listeners & commands that arent scoped on what we are coding",
     "main": "./bot.class.js",
     "types": "./bot.class.d.ts",
     "scripts": {
@@ -9,20 +9,19 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/0Zyro/sarasbot.git"
+        "url": "git+https://github.com/tramallo/bdd-discord-bot.git"
     },
     "keywords": [
         "discordjs",
         "bot",
-        "behaviour",
-        "development"
+        "behaviour"
     ],
     "author": "Timothy Ramallo",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/0Zyro/sarasbot/issues"
+        "url": "https://github.com/tramallo/bdd-discord-bot/issues"
     },
-    "homepage": "https://github.com/0Zyro/sarasbot#readme",
+    "homepage": "https://github.com/tramallo/bdd-discord-bot#readme",
     "dependencies": {
         "discord.js": "^13.8.0"
     },
