--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bdd-discord-bot",
-    "version": "0.0.21",
+    "version": "0.0.22",
     "main": "./src/bot.class.js",
     "types": "./src/bot.class.d.ts",
     "description": "This package exposes wrapper classes that allows developer to code a discord bot thinking about the desired 'behaviours' of the bot instead of dealing with events, listeners & commands that arent scoped on what we are coding",
@@ -23,10 +23,7 @@
     },
     "homepage": "https://github.com/tramallo/bdd-discord-bot#readme",
     "dependencies": {
-        "discord.js": "^13.8.0"
-    },
-    "devDependencies": {
-        "@types/node": "^17.0.41",
-        "typescript": "^4.7.3"
+        "discord.js": "^13.8.0",
+        "typescript": "^4.7.4"
     }
 }
