--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
     "main": "./dist/bot.class.js",
     "types": "./dist/bot.class.d.ts",
     "description": "This package exposes wrapper classes that allows developer to code a discord bot thinking about the desired 'behaviours' of the bot instead of dealing with events, listeners & commands that arent scoped on what we are coding",
+    "license": "MIT",
     "author": "Timothy Ramallo",
+    "homepage": "https://github.com/tramallo/bdd-discord-bot#readme",
+    "files": [
+        "./dist"
+    ],
     "scripts": {
-        "build": "tsc"
+        "build": "tsc",
+        "prepublishOnly": "npm run build"
     },
     "repository": {
         "type": "git",
@@ -17,11 +23,9 @@
         "bot",
         "behaviour"
     ],
-    "license": "MIT",
     "bugs": {
         "url": "https://github.com/tramallo/bdd-discord-bot/issues"
     },
-    "homepage": "https://github.com/tramallo/bdd-discord-bot#readme",
     "dependencies": {
         "discord.js": "^13.8.0",
         "typescript": "^4.7.4"
