--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bdd-discord-bot",
-    "version": "0.0.24",
+    "version": "0.0.25",
     "main": "./dist/bot.class.js",
     "types": "./dist/bot.class.d.ts",
     "description": "This package exposes wrapper classes that allows developer to code a discord bot thinking about the desired 'behaviours' of the bot instead of dealing with events, listeners & commands that arent scoped on what we are coding",
@@ -29,5 +29,8 @@
     "dependencies": {
         "discord.js": "^13.8.0",
         "typescript": "^4.7.4"
+    },
+    "peerDependencies": {
+        "discord.js": "^13.8.0"
     }
 }
