--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "ES6",
         "module": "commonjs",
-        "outDir": "dist",
+        "outDir": "lib",
         "strict": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
@@ -10,10 +10,8 @@
         "importHelpers": true,
         "esModuleInterop": true,
         "removeComments": true,
-        "declaration": true,
-        "typeRoots": ["/src/**/*"],
-        "baseUrl": "./"
+        "declaration": true
     },
-    "include": ["src/**/*"],
-    "exclude": ["**/*.spec.ts"]
+    "include": ["src"],
+    "exclude": ["node_modules", "**/*.spec.ts"]
 }
