--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
     "name": "bdd-discord-bot",
     "version": "0.0.28",
-    "main": "lib/bot.class.js",
-    "types": "lib/bot.class.d.ts",
-    "description": "This package exposes wrapper classes that allows developer to code a discord bot thinking about the desired 'behaviours' of the bot instead of dealing with events, listeners & commands that arent scoped on what we are coding",
+    "main": "src/bot.ts",
+    "description": "",
     "license": "MIT",
-    "author": "Timothy Ramallo",
+    "author": "T. Ramallo",
     "homepage": "https://github.com/tramallo/bdd-discord-bot#readme",
     "files": [
         "lib/**/*"
     ],
     "scripts": {
-        "build": "tsc",
-        "test": "jest --config jestconfig.json"
+        "dev": "ts-node src/bot.ts",
+        "build": "tsc"
     },
     "repository": {
         "type": "git",
@@ -30,8 +29,9 @@
         "discord.js": "^13.8.0"
     },
     "devDependencies": {
-        "@types/jest": "^28.1.7",
+        "dotenv": "^16.0.2",
         "prettier": "^2.7.1",
+        "ts-node": "^10.9.1",
         "typescript": "^4.7.4"
     }
 }
