--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "ES6",
         "module": "commonjs",
-        "outDir": "lib",
+        "outDir": "build",
         "strict": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
@@ -13,5 +13,5 @@
         "declaration": true
     },
     "include": ["src"],
-    "exclude": ["node_modules", "**/*.spec.ts"]
+    "exclude": ["**/*.spec.ts"]
 }
