added start command, typing files no longer generated along js files on build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
         "importHelpers": true,
         "esModuleInterop": true,
         "removeComments": true,
-        "declaration": true
+        "declaration": false
     },
     "include": ["src"],
     "exclude": ["**/*.spec.ts"]
