--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     ],
     "scripts": {
         "dev": "ts-node src/bot.ts",
-        "build": "tsc"
+        "build": "tsc",
+        "start": "node build/bot.js"
     },
     "repository": {
         "type": "git",
