--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "outDir": "build",
         "strict": true,
         "forceConsistentCasingInFileNames": true,
+        "experimentalDecorators": true,
         "resolveJsonModule": true,
         "moduleResolution": "node",
         "importHelpers": true,
